--- a/Kyoku/app/src/main/res/values/strings.xml
+++ b/Kyoku/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Kyoku</string>
+    <string name="asset_statements" translatable="false">
+[{
+  \"include\": \"https://ccba-103-44-173-204.ngrok-free.app/.well-known/assetlinks.json\"
+}]
+</string>
 </resources>
