--- a/Kyoku/app/src/main/res/values/strings.xml
+++ b/Kyoku/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Kyoku</string>
     <string name="asset_statements" translatable="false">
 [{
-  \"include\": \"https://e83c-103-42-158-92.ngrok-free.app/.well-known/assetlinks.json\"
+  \"include\": \"https://72ef-103-44-175-68.ngrok-free.app/.well-known/assetlinks.json\"
 }]
 </string>
 </resources>
