--- a/Kyoku/app/src/main/res/values/strings.xml
+++ b/Kyoku/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Kyoku</string>
     <string name="asset_statements" translatable="false">
 [{
-  \"include\": \"https://499c-103-42-157-115.ngrok-free.app/.well-known/assetlinks.json\"
+  \"include\": \"https://c07f-103-192-117-94.ngrok-free.app/.well-known/assetlinks.json\"
 }]
 </string>
 </resources>
