--- a/Kyoku/app/src/main/res/values/strings.xml
+++ b/Kyoku/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Kyoku</string>
     <string name="asset_statements" translatable="false">
 [{
-  \"include\": \"https://04f7-115-187-49-209.ngrok-free.app/.well-known/assetlinks.json\"
+  \"include\": \"https://b1bc-115-187-49-209.ngrok-free.app/.well-known/assetlinks.json\"
 }]
 </string>
 </resources>
