bDate set req can be made

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="save">Save</string>
     <string name="error_bDate_too_young">You are too young to use the app</string>
     <string name="error_bDate_too_old">Age can\'t exced 99 year</string>
+    <string name="success_bDate_stored">B\'Date stored successfully</string>
 </resources>
