--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="error_bDate_too_old">Age can\'t exceed 99 year</string>
     <string name="success_bDate_stored">B\'Date stored successfully</string>
     <string name="less_genre_selected">Please select at-list 5 genre to continue</string>
-    <string name="set_genre_title">Pic Your Favourite Genre</string>
+    <string name="set_genre_title">Pick Your Favourite Genre</string>
+    <string name="set_artist_title">Pick Your Favourite Artist</string>
+    <string name="less_artist_selected">Please select at-lest 5 artist to continue</string>
 </resources>
