--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -51,4 +51,13 @@
     <string name="set_genre_title">Pick Your Favourite Genre</string>
     <string name="set_artist_title">Pick Your Favourite Artist</string>
     <string name="less_artist_selected">Please select at-lest 5 artist to continue</string>
+    <string name="view_profile">View Profile</string>
+    <string name="settings_title">S E T T I N G S</string>
+    <string name="history_title">H I S T O R Y</string>
+    <string name="logout_title">L O G O U T</string>
+    <string name="home_label">Home</string>
+    <string name="library_label">Library</string>
+    <string name="history_label">History</string>
+    <string name="settings_label">Settings</string>
+    <string name="logout_label">Logout</string>
 </resources>
