library screen structure finished

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="history_label">History</string>
     <string name="settings_label">Settings</string>
     <string name="logout_label">Logout</string>
+    <string name="library_title">Your Library</string>
 </resources>
