song can be added to favourite

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="view_artist">View Artist</string>
     <string name="add_to_favourite">Add To Favourite</string>
     <string name="remove_from_favourite">Remove From Favourite</string>
+    <string name="song_added_to_favourite">Song added to Favourite</string>
 </resources>
