--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="remove_from_favourite">Remove From Favourite</string>
     <string name="song_added_to_favourite">Song added to Favourite</string>
     <string name="favourite">Favourite</string>
+    <string name="song_removed_from_favourite">Song removed from Favourite</string>
 </resources>
