--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="song_added_to_favourite">Song added to Favourite</string>
     <string name="favourite">Favourite</string>
     <string name="song_removed_from_favourite">Song removed from Favourite</string>
+    <string name="artist_added_to_library">Artist added to library</string>
+    <string name="artist_removed_from_library">Artist removed from library\n</string>
 </resources>
