playlist can be modified

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -109,4 +109,5 @@
     <string name="edit_playlist">Edit Playlist</string>
     <string name="new_playlist">New Playlist</string>
     <string name="search_playlist">Search Playlist</string>
+    <string name="playlist_updated">playlist are updated</string>
 </resources>
