new album can be added by searching

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -132,4 +132,7 @@
     <string name="songs">Songs</string>
     <string name="explore_albums">Explore Albums</string>
     <string name="search_album">search album</string>
+    <string name="by_popularity">by popularity</string>
+    <string name="by_year">by year</string>
+    <string name="by_name">by name</string>
 </resources>
