suggest playlist song can be generated

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -138,4 +138,5 @@
     <string name="search_artist">search artist</string>
     <string name="international">International</string>
     <string name="explore_artist">Explore Artist</string>
+    <string name="build_your_playlist">Build your playlist wiht this songs</string>
 </resources>
