create playlist searched songs can be viewd

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -139,4 +139,5 @@
     <string name="international">International</string>
     <string name="explore_artist">Explore Artist</string>
     <string name="build_your_playlist">Build your playlist wiht this songs</string>
+    <string name="search">search</string>
 </resources>
