--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -112,7 +112,7 @@
     <string name="playlist_updated">playlist are updated</string>
     <string name="error_empty_playlist_name">playlist name can\'t be empty</string>
     <string name="error_short_playlist_name">playlist name must contain at-lest 4 character</string>
-    <string name="playlist_created">playlist create</string>
+    <string name="playlist_created">Playlist create</string>
     <string name="pin">Pin</string>
     <string name="un_pin">Unpin</string>
     <string name="remove">Remove</string>
@@ -140,4 +140,5 @@
     <string name="explore_artist">Explore Artist</string>
     <string name="build_your_playlist">Build your playlist wiht this songs</string>
     <string name="search">search</string>
+    <string name="error_playlist_name_conflict">Two playlist can\'t have same name</string>
 </resources>
