plyer screen can be viewed

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -144,4 +144,5 @@
     <string name="playing_from">Playing from</string>
     <string name="playing_queue">Playing Queue</string>
     <string name="song_info">Song Info</string>
+    <string name="song">Song</string>
 </resources>
