--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -145,4 +145,5 @@
     <string name="playing_queue">Playing Queue</string>
     <string name="song_info">Song Info</string>
     <string name="song">Song</string>
+    <string name="nothing_to_show">Nothing to show</string>
 </resources>
