--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -146,4 +146,5 @@
     <string name="song_info">Song Info</string>
     <string name="song">Song</string>
     <string name="nothing_to_show">Nothing to show</string>
+    <string name="release_year">"Release year: "</string>
 </resources>
