--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -147,4 +147,5 @@
     <string name="song">Song</string>
     <string name="nothing_to_show">Nothing to show</string>
     <string name="release_year">"Release year: "</string>
+    <string name="profile_title">Profile</string>
 </resources>
