contructing email login screen

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -4,4 +4,156 @@
     <string name="app_description">Listen to Thousand of Songs add free on Kyoku.\nSign In and get started.</string>
     <string name="email_sign_in">Continue with Email</string>
     <string name="google_sign_in">Continue with Google</string>
+
+    <string name="continue_with_google">Continue With Google</string>
+    <string name="continue_with_email">Continue With Email</string>
+    <string name="intro_text">Listen to Thousands of Songs Add Free on Kyoku.</string>
+    <string name="continue_text">C O N T I N U E</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password ?</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="signUp">SignUp</string>
+    <string name="dont_have_account">Don\'t have an account?</string>
+    <string name="login">LogIn</string>
+    <string name="did_not_reveive__verification_mail">Didn\'t receive verification Mail ?</string>
+    <string name="send_again">Send Again</string>
+    <string name="username">Username</string>
+    <string name="conform_password">Conform password</string>
+    <string name="verification_mail_sent">An verification mail is sent to you on this email.Please verify to continue.</string>
+    <string name="password_reset_mail_sent">An password reset mail is sent to you on this email.Please change your password and login again.</string>
+    <string name="send">S E N D</string>
+    <string name="error_invalid_email">Not a valid email</string>
+    <string name="error_empty_password">Password can\'t be empty</string>
+    <string name="error_password_to_short">Password must contain attlist 4 character</string>
+    <string name="error_password_to_long">Password can\'t exceed 15 character</string>
+    <string name="error_password_invalid">Password can only contain number and alphabets</string>
+    <string name="error_username_invalid">Please enter a valid username</string>
+    <string name="error_username_to_long">Username can\'t exceed 20 character</string>
+    <string name="error_username_cant_start_with_underscore">Username can\'t start with underscore</string>
+    <string name="error_username_empty">Username can\'t be empty</string>
+    <string name="error_password_not_match">Password doesn\'t match</string>
+    <string name="error_something_went_wrong">Opp\'s something went wrong try again</string>
+    <string name="error_no_internet">Please check your Internet Connection.</string>
+    <string name="error_user_not_found">No User Found</string>
+    <string name="error_invalid_password">Password doesn\'t match</string>
+    <string name="error_email_already_exist">Email Already In User</string>
+    <string name="link">Past Link</string>
+    <string name="add">A D D</string>
+    <string name="spotify_top_appbar_title">Import Your Spotify Playlist</string>
+    <string name="skip">S K I P</string>
+    <string name="error_invalid_spotify_link">Please enter valid playlist link</string>
+    <string name="playlist_added">Playlist added</string>
+    <string name="error_empyt_BDate">Please fill this field</string>
+    <string name="set_bDate_top_appbar_title">Set Your B\'Day</string>
+    <string name="select_b_date">Select B\'day</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="error_bDate_too_young">You are too young to use the app</string>
+    <string name="error_bDate_too_old">Age can\'t exceed 99 year</string>
+    <string name="success_bDate_stored">B\'Date stored successfully</string>
+    <string name="less_genre_selected">Please select at-list 5 genre to continue</string>
+    <string name="set_genre_title">Pick Your Favourite Genre</string>
+    <string name="set_artist_title">Pick Your Favourite Artist</string>
+    <string name="less_artist_selected">Please select at-lest 5 artist to continue</string>
+    <string name="view_profile">View Profile</string>
+    <string name="settings_title">S E T T I N G S</string>
+    <string name="history_title">H I S T O R Y</string>
+    <string name="logout_title">L O G O U T</string>
+    <string name="home_label">Home</string>
+    <string name="library_label">Library</string>
+    <string name="history_label">History</string>
+    <string name="settings_label">Settings</string>
+    <string name="logout_label">Logout</string>
+    <string name="library_title">Your Library</string>
+    <string name="more_from_artist">More From</string>
+    <string name="view_more">view\nmore</string>
+    <string name="explore_more">Explore More</string>
+    <string name="popular_artist_mix">Popular Artist Mix</string>
+    <string name="popular_song_mix">Popular Songs Mix</string>
+    <string name="popular_songs_from_your_time">Old Gems</string>
+    <string name="popular_albums">"Popular Albums "</string>
+    <string name="artist_you_may_like">Artist\'s You May Like</string>
+    <string name="best_from_artist">Best From Artists</string>
+    <string name="artist">Artist</string>
+    <string name="album">Album</string>
+    <string name="playlist">Playlist</string>
+    <string name="all">All</string>
+    <string name="play_playlist">Play Playlist</string>
+    <string name="play">Play</string>
+    <string name="add_as_playlist">Add as Playlist</string>
+    <string name="download">Download</string>
+    <string name="old_gem">Old Gem</string>
+    <string name="favourite_artist_mix">Favourite Artist Mix</string>
+    <string name="play_next_on_queue">Play Next On Queue</string>
+    <string name="follow">Follow</string>
+    <string name="explore">Explore</string>
+    <string name="un_follow">Unfollow</string>
+    <string name="remove_from_saved_album">Remove From Saved Album</string>
+    <string name="save_album">Save Album</string>
+    <string name="remove_from_queue">Remove From Queue</string>
+    <string name="play_last_on_queue">play Last On Queue</string>
+    <string name="add_to_playlist">Add To Playlist</string>
+    <string name="view_artist">View Artist</string>
+    <string name="add_to_favourite">Add To Favourite</string>
+    <string name="remove_from_favourite">Remove From Favourite</string>
+    <string name="song_added_to_favourite">Song added to Favourite</string>
+    <string name="favourite">Favourite</string>
+    <string name="song_removed_from_favourite">Song removed from Favourite</string>
+    <string name="artist_added_to_library">Artist added to library</string>
+    <string name="artist_removed_from_library">Artist removed from library\n</string>
+    <string name="album_added_to_library">Album added to library</string>
+    <string name="album_removed_from_favourite">Album removed from library</string>
+    <string name="added_as_playlist">added as playlist</string>
+    <string name="playlist_name_conflict">Playlist can\'t have same name</string>
+    <string name="setting">Setting</string>
+    <string name="account">Account</string>
+    <string name="logout_text">"Are you sure you want to logout ? "</string>
+    <string name="yes">yes</string>
+    <string name="no">no</string>
+    <string name="edit_playlist">Edit Playlist</string>
+    <string name="new_playlist">New Playlist</string>
+    <string name="search_playlist">Search Playlist</string>
+    <string name="playlist_updated">playlist are updated</string>
+    <string name="error_empty_playlist_name">playlist name can\'t be empty</string>
+    <string name="error_short_playlist_name">playlist name must contain at-lest 4 character</string>
+    <string name="playlist_created">Playlist create</string>
+    <string name="pin">Pin</string>
+    <string name="un_pin">Unpin</string>
+    <string name="remove">Remove</string>
+    <string name="view">View</string>
+    <string name="pinned">Pinned</string>
+    <string name="favourite_pinned">Favourite is now pinned</string>
+    <string name="favourite_un_pined">Favourite is Unpinned</string>
+    <string name="album_pinned">"Album is now pinned"</string>
+    <string name="album_un_pined">Album is now Unpinned</string>
+    <string name="playlist_un_pinned">Playlist is now Unpinned</string>
+    <string name="playlist_pinned">Playlist is now pinned</string>
+    <string name="artist_un_pinned">Artist is now Unpinned</string>
+    <string name="artist_pinned">Artist is now pinned</string>
+    <string name="artist_un_followed">Artist Unfollow</string>
+    <string name="playlist_deleted">Saved playlist deleted.</string>
+    <string name="album_deleted">Album deleted.</string>
+    <string name="songs">Songs</string>
+    <string name="explore_albums">Explore Albums</string>
+    <string name="search_album">search album</string>
+    <string name="by_popularity">Trending</string>
+    <string name="by_year">artist</string>
+    <string name="by_name">release year</string>
+    <string name="search_artist">search artist</string>
+    <string name="international">International</string>
+    <string name="explore_artist">Explore Artist</string>
+    <string name="build_your_playlist">Build your playlist with this songs</string>
+    <string name="search">search</string>
+    <string name="error_playlist_name_conflict">Two playlist can\'t have same name</string>
+    <string name="playing_from">Playing from</string>
+    <string name="playing_queue">Playing Queue</string>
+    <string name="song_info">Song Info</string>
+    <string name="song">Song</string>
+    <string name="nothing_to_show">Nothing to show</string>
+    <string name="release_year">"Release year: "</string>
+    <string name="profile_title">Profile</string>
+    <string name="saved_playlist">saved playlist</string>
+    <string name="saved_albums">saved albums</string>
+    <string name="followed_artists">followed artists</string>
 </resources>
